fix: research table styles

--- a/web/css/main.css
+++ b/web/css/main.css
@@ -2951,14 +2951,15 @@ body {
 	}
 
 	.research-box {
-		position: absolute;
+		position: fixed;
 		left: 0;
 		right: 0;
 		bottom: 0;
+    z-index: 1000;
 	}
 
 	.research-box .research-slide .container {
-		padding-top: 17px;
+		padding-top: 30px;
 		padding-bottom: 40px;
 	}
 
