--- a/scss/main.scss
+++ b/scss/main.scss
@@ -1745,6 +1745,10 @@ body{
 	.link {
 		fill: none;
 		stroke: transparent;
+    stroke-opacity: 0.5;
+    &:hover {
+      stroke-opacity: 1;
+    }
 	}
 }
 
