--- a/scss/main.scss
+++ b/scss/main.scss
@@ -1361,7 +1361,7 @@ body{
 		position: absolute;
 		bottom: 0;
 		@include media('>=tablet') {
-			display: inline-block;
+			// display: inline-block;
 			vertical-align: middle;
 			position: static;
 		}
