fix: includes env variable

--- a/about.ejs
+++ b/about.ejs
@@ -23,6 +23,9 @@
   <!-- include custom JavaScript -->
   <script src="js/main.js" defer></script>
   <script src="js/lib.js" defer></script>
+  <script type="application/javascript">
+    window._env = '<%= environment %>';
+  </script>
 </head>
 <body>
 <!-- main container of all the page elements -->
