--- a/graph.ejs
+++ b/graph.ejs
@@ -27,6 +27,9 @@
   <script src="js/app.js" defer></script>
   <script src="js/main.js" defer></script>
   <script src="js/lib.js" defer></script>
+  <script type="application/javascript">
+    window._env = '<%= environment %>';
+  </script>
 </head>
 <body>
 <!-- main container of all the page elements -->
