--- a/css/main.css
+++ b/css/main.css
@@ -1930,9 +1930,11 @@ body {
 
 .charts-block .col-holder {
   height: 100%;
+  min-height: 325px;
   padding: 10px;
   border-radius: 7px;
-  border: 1px solid #dbdfea; }
+  border: 1px solid #dbdfea;
+  position: relative; }
 
 @media (max-width: 767px) {
   .research-active {
@@ -2402,3 +2404,21 @@ body {
 
 .is-hidden {
   display: none; }
+
+.spinner {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  height: 70px;
+  width: 70px;
+  z-index: 1;
+  transform: translate(-50%, -50%) rotate(0deg);
+  animation: rotate 0.6s linear infinite;
+  border: 3px solid transparent;
+  border-top-color: #51e5b4;
+  border-right-color: turquoise;
+  border-radius: 50%; }
+
+@keyframes rotate {
+  100% {
+    transform: translate(-50%, -50%) rotate(360deg); } }
