feat: includes data download

--- a/graph.ejs
+++ b/graph.ejs
@@ -13,6 +13,8 @@
       rel="stylesheet">
   <!-- include lodash -->
   <script src="https://cdn.jsdelivr.net/npm/lodash@4.17.4/lodash.min.js"></script>
+  <!-- include json2csv -->
+  <script src="js/csv-converter.js"></script>
   <!-- include jQuery library -->
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js" defer></script>
   <script>window.jQuery || document.write('<script src="js/jquery-1.11.3.min.js" defer><\/script>')</script>
@@ -193,7 +195,7 @@
         <div class="slide-holder">
           <div class="container">
             <div class="btn-holder">
-              <a href="#" class="download">Download Data</a>
+              <a href="#" class="download js-table-download">Download Data</a>
             </div>
             <div class="table-holder">
               <table>
