--- a/css/main.css
+++ b/css/main.css
@@ -2409,8 +2409,8 @@ body {
   position: absolute;
   top: 50%;
   left: 50%;
-  height: 70px;
-  width: 70px;
+  height: 20px;
+  width: 20px;
   z-index: 1;
   transform: translate(-50%, -50%) rotate(0deg);
   animation: rotate 0.6s linear infinite;
@@ -2422,3 +2422,19 @@ body {
 @keyframes rotate {
   100% {
     transform: translate(-50%, -50%) rotate(360deg); } }
+
+.bubble-tooltip {
+  position: absolute;
+  white-space: nowrap;
+  padding: 5px;
+  font-size: 13px;
+  font-weight: 400;
+  background: rgba(255, 255, 255, 0.7);
+  border: 1px solid #061b60;
+  border-radius: 4px;
+  pointer-events: none;
+  text-align: left;
+  line-height: 1.3;
+  color: #333; }
+  .bubble-tooltip > * {
+    color: #333; }
