fix: nav bar home

--- a/about.ejs
+++ b/about.ejs
@@ -35,14 +35,14 @@
     <div class="container">
       <!-- logo of the page -->
       <div class="logo">
-        <a href="#">
+        <a href="/index.html">
           <img src="images/logo.jpg" height="52" width="200"
                alt="synthesys synthesys of systematic resources">
         </a>
       </div>
       <!-- main navigation area -->
       <div class="header-content">
-        <a href="index.html" class="nav-opener"><span></span></a>
+        <a href="/index.html" class="nav-opener"><span></span></a>
         <div class="nav-area">
           <nav id="nav">
             <ul>
