feat: includes showcase pages

--- a/index.ejs
+++ b/index.ejs
@@ -47,13 +47,13 @@
           <nav id="nav">
             <ul>
               <li>
-                <a href="graph.html">Overview</a>
+                <a href="/graph.html">Overview</a>
               </li>
               <li>
-                <a href="showcases.html">Showcases</a>
+                <a href="/showcases">Showcases</a>
               </li>
               <li>
-                <a href="about.html">About</a>
+                <a href="/about.html">About</a>
               </li>
             </ul>
           </nav>
