--- a/graph.ejs
+++ b/graph.ejs
@@ -53,13 +53,13 @@
           <nav id="nav">
             <ul>
               <li class="active">
-                <a href="graph.html">Overview</a>
+                <a href="/graph.html">Overview</a>
               </li>
               <li>
-                <a href="showcases.html">Showcases</a>
+                <a href="/showcases">Showcases</a>
               </li>
               <li>
-                <a href="about.html">About</a>
+                <a href="/about.html">About</a>
               </li>
             </ul>
           </nav>
