--- a/scss/main.scss
+++ b/scss/main.scss
@@ -592,6 +592,30 @@ body {
     p {
       margin: 0;
     }
+
+    .btn-holder {
+      @extend %clearfix;
+      text-align: left;
+    }
+    .more {
+      color: $cerulean-blue;
+      font-size: 16px;
+      line-height: 20px;
+      font-weight: 700;
+      text-decoration: none;
+      &:after {
+        color: $turquoise;
+        content: '\e801';
+        font-family: "fontello";
+        font-size: 22px;
+        margin: 0 0 0 20px;
+        display: inline-block;
+        vertical-align: middle;
+      }
+      &:hover {
+        color: $turquoise;
+      }
+    }
   }
 }
 
@@ -742,33 +766,7 @@ body {
   margin: 0 auto;
   padding: 11px 0;
   border-top: 3px solid rgba($oxford-blue, 0.10);
-  .btn-holder {
-    @extend %clearfix;
-    text-align: right;
-    margin: 0 0 23px;
-    @include media('>=tablet') {
-      margin: 0 0 12px;
-    }
-  }
-  .more {
-    color: $cerulean-blue;
-    font-size: 16px;
-    line-height: 20px;
-    font-weight: 700;
-    text-decoration: none;
-    &:after {
-      color: $turquoise;
-      content: '\e801';
-      font-family: "fontello";
-      font-size: 22px;
-      margin: 0 0 0 20px;
-      display: inline-block;
-      vertical-align: middle;
-    }
-    &:hover {
-      color: $turquoise;
-    }
-  }
+
   h1 {
     color: $oxford-blue;
     font-size: 60px;
