--- a/graph.ejs
+++ b/graph.ejs
@@ -134,7 +134,7 @@
         <div class="col">
           <div class="col-holder">
             <div class="chart-heading">
-              <h2 class="chart-title">Researchers by County</h2>
+              <h2 class="chart-title">Researchers by Region</h2>
               <h3 class="chart-sub-title js-country-filter-dependent"></h3>
               <div class="chart-info">
                 <span class="js-discipline-filter-dependent"></span>
