fix: updates links

--- a/graph.ejs
+++ b/graph.ejs
@@ -100,7 +100,7 @@
             </li>
             <li>
               <select class="js-filter" data-filter-type="funding_round">
-                <option value="">Select a Founding Round</option>
+                <option value="">Select a Funding Round</option>
               </select>
             </li>
           </ul>
