--- a/index.ejs
+++ b/index.ejs
@@ -84,7 +84,7 @@
                 <strong class="title">Showcases</strong>
               </div>
               <div class="bottom">
-                <a href="#" class="github-link">View on GitHub</a>
+                <a href="/showcases" class="github-link">Go to showcases</a>
               </div>
             </div>
           </div>
@@ -107,9 +107,8 @@
 									</span>
               </div>
               <div class="bottom">
-                <p>Short Description of the Project Aenean lacinia bibendum nulla sed
-                  consectetur.</p>
-                <a href="#" class="search-link"><i class="icon-search"></i></a>
+                <p>Inselect facilitates digitization by automating the capture of individual specimens from whole-drawer scans.</p>
+                <a href="/showcases/inselect.html" class="search-link"><i class="icon-search"></i></a>
               </div>
             </div>
           </div>
@@ -132,9 +131,8 @@
 									</span>
               </div>
               <div class="bottom">
-                <p>Short Description of the Project Aenean lacinia bibendum nulla sed
-                  consectetur.</p>
-                <a href="#" class="search-link"><i class="icon-search"></i></a>
+              
+                <a href="/showcases/zoosphere.html" class="search-link"><i class="icon-search"></i></a>
               </div>
             </div>
           </div>
@@ -146,7 +144,7 @@
       <div class="detail">
         <p><span>5,718</span> vistors, from <span>767</span> institutes, were granted a total of
           <span>69,472</span> research days.</p>
-        <a href="#" class="more">Discover More</a>
+        <a href="/graph.html" class="more">Discover More</a>
       </div>
       <div class="map">
         <img src="images/map-placeholder.jpg" height="576" width="768" alt="image description">
